--- a/package.json
+++ b/package.json
@@ -13,31 +13,31 @@
   },
   "private": true,
   "dependencies": {
-    "@apollo/client": "^3.5.7",
+    "@apollo/client": "^3.6.9",
     "@apollo/react-hooks": "^4.0.0",
-    "@auth0/auth0-react": "^1.9.0",
+    "@auth0/auth0-react": "^1.10.2",
     "@effect-ts/core": "^0.60.2",
     "@effect-ts/system": "^0.57.2",
     "@effect-ts/tracing-utils": "^0.5.2",
     "@effect/core": "^0.0.7",
     "@headlessui/react": "^1.6.6",
     "@heroicons/react": "^1.0.6",
-    "@neo4j/graphql": "^2.5.5",
-    "@nestjs/common": "^8.4.7",
-    "@nestjs/config": "^2.1.0",
-    "@nestjs/core": "^8.4.7",
-    "@nestjs/graphql": "^10.0.16",
+    "@neo4j/graphql": "^3.6.2",
+    "@nestjs/common": "9.0.9",
+    "@nestjs/config": "^2.2.0",
+    "@nestjs/core": "9.0.9",
+    "@nestjs/graphql": "^10.0.21",
     "@nestjs/mapped-types": "*",
-    "@nestjs/passport": "^8.2.2",
-    "@nestjs/platform-express": "^8.4.7",
-    "@nestjs/typeorm": "^8.1.4",
+    "@nestjs/passport": "^9.0.0",
+    "@nestjs/platform-express": "9.0.9",
+    "@nestjs/typeorm": "^9.0.1",
     "@storybook/core-server": "6.5.9",
     "@tanstack/react-table": "^8.3.2",
     "@tsplus/runtime": "^0.1.3",
     "@tsplus/stdlib": "^0.2.2",
-    "apollo-server-core": "^3.6.1",
-    "apollo-server-express": "^3.6.1",
-    "autoprefixer": "^10.4.7",
+    "apollo-server-core": "^3.10.1",
+    "apollo-server-express": "^3.10.1",
+    "autoprefixer": "10.4.8",
     "class-validator": "^0.13.2",
     "clsx": "^1.2.1",
     "connect-flash": "^0.1.1",
@@ -53,26 +53,24 @@
     "fast-check": "^2.25.0",
     "fp-ts": "^2.12.1",
     "gluegun": "^5.1.2",
-    "graphql": "^16.2.0",
-    "graphql-tools": "^8.2.0",
+    "graphql": "^16.5.0",
+    "graphql-tools": "^8.3.3",
     "hbs": "^4.2.0",
-    "jwks-rsa": "^2.0.5",
-    "neo4j-driver": "^4.4.6",
-    "nest-commander": "^2.5.0",
-    "nestjs-pino": "^2.6.0",
+    "jwks-rsa": "^2.1.4",
+    "neo4j-driver": "^4.4.7",
+    "nestjs-pino": "^3.1.1",
     "octokit": "^1.7.1",
     "openapi-typescript-fetch": "^1.1.3",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
-    "pino-http": "^7.1.0",
-    "pino-pretty": "^8.1.0",
-    "postcss": "^8.4.14",
+    "pino-http": "^8.2.0",
+    "pino-pretty": "^9.0.0",
+    "postcss": "8.4.16",
     "react": "18.2.0",
     "react-daisyui": "^2.1.0",
     "react-dom": "18.2.0",
     "react-is": "18.2.0",
-    "react-json-view": "^1.21.3",
     "react-router-dom": "6.3.0",
     "react-table": "^7.8.0",
     "react-test-renderer": "18.2.0",
@@ -82,7 +80,7 @@
     "schema-dts": "^1.1.0",
     "sqlite3": "^5.0.8",
     "tailwind-merge": "^1.5.0",
-    "tailwindcss": "^3.1.6",
+    "tailwindcss": "3.1.8",
     "tslib": "^2.4.0",
     "typeorm": "^0.3.6",
     "universal-base64": "^2.1.0"
@@ -92,28 +90,28 @@
     "@babel/preset-typescript": "7.17.12",
     "@fontsource/fira-code": "^4.5.10",
     "@fontsource/nunito-sans": "^4.5.8",
-    "@graphql-codegen/cli": "^2.3.0",
-    "@graphql-codegen/import-types-preset": "^2.1.4",
-    "@graphql-codegen/near-operation-file-preset": "^2.1.4",
-    "@graphql-codegen/typescript": "^2.4.1",
-    "@graphql-codegen/typescript-operations": "^2.2.1",
-    "@graphql-codegen/typescript-react-apollo": "^3.2.2",
-    "@nestjs/schematics": "^8.0.11",
-    "@nestjs/testing": "^8.4.7",
-    "@nrwl/cli": "14.4.2",
-    "@nrwl/cypress": "14.4.2",
-    "@nrwl/devkit": "14.4.2",
-    "@nrwl/eslint-plugin-nx": "14.4.2",
-    "@nrwl/jest": "14.4.2",
-    "@nrwl/linter": "14.4.2",
-    "@nrwl/nest": "14.4.2",
-    "@nrwl/node": "14.4.2",
-    "@nrwl/nx-plugin": "14.4.2",
-    "@nrwl/react": "14.4.2",
-    "@nrwl/storybook": "14.4.2",
-    "@nrwl/tao": "14.4.2",
-    "@nrwl/web": "14.4.2",
-    "@nrwl/workspace": "14.4.2",
+    "@graphql-codegen/cli": "^2.11.6",
+    "@graphql-codegen/import-types-preset": "^2.2.3",
+    "@graphql-codegen/near-operation-file-preset": "^2.4.1",
+    "@graphql-codegen/typescript": "^2.7.3",
+    "@graphql-codegen/typescript-operations": "^2.5.3",
+    "@graphql-codegen/typescript-react-apollo": "^3.3.3",
+    "@nestjs/schematics": "9.0.1",
+    "@nestjs/testing": "9.0.9",
+    "@nrwl/cli": "14.5.6",
+    "@nrwl/cypress": "14.5.6",
+    "@nrwl/devkit": "14.5.6",
+    "@nrwl/eslint-plugin-nx": "14.5.6",
+    "@nrwl/jest": "14.5.6",
+    "@nrwl/linter": "14.5.6",
+    "@nrwl/nest": "14.5.6",
+    "@nrwl/node": "14.5.6",
+    "@nrwl/nx-plugin": "14.5.6",
+    "@nrwl/react": "14.5.6",
+    "@nrwl/storybook": "14.5.6",
+    "@nrwl/tao": "14.5.6",
+    "@nrwl/web": "14.5.6",
+    "@nrwl/workspace": "14.5.6",
     "@storybook/addon-essentials": "6.5.9",
     "@storybook/addons": "^6.5.9",
     "@storybook/builder-webpack5": "6.5.9",
@@ -133,10 +131,10 @@
     "@types/express-handlebars": "^6.0.0",
     "@types/express-session": "^1.17.4",
     "@types/jest": "28.1.2",
-    "@types/node": "18.0.0",
+    "@types/node": "18.7.1",
     "@types/passport-jwt": "^3.0.6",
     "@types/passport-local": "^1.0.34",
-    "@types/react": "18.0.14",
+    "@types/react": "18.0.17",
     "@types/react-dom": "18.0.6",
     "@types/react-router-dom": "5.3.3",
     "@types/react-table": "^7.7.12",
@@ -151,7 +149,7 @@
     "eslint-config-prettier": "8.5.0",
     "eslint-plugin-cypress": "^2.12.1",
     "eslint-plugin-import": "2.26.0",
-    "eslint-plugin-jsx-a11y": "6.6.0",
+    "eslint-plugin-jsx-a11y": "6.6.1",
     "eslint-plugin-react": "7.30.1",
     "eslint-plugin-react-hooks": "4.6.0",
     "gh-pages": "^4.0.0",
@@ -166,10 +164,11 @@
     "storybook-addon-themes": "^6.1.0",
     "swc-loader": "0.1.15",
     "ts-jest": "28.0.5",
-    "ts-node": "10.8.2",
+    "ts-node": "10.9.1",
     "tslib": "^2.4.0",
     "typescript": "4.7.4",
     "url-loader": "^4.1.1",
     "webpack": "^5.73.0"
   }
 }
+
