--- a/libs/data-access/cc/project.json
+++ b/libs/data-access/cc/project.json
@@ -19,7 +19,7 @@
       }
     },
     "generate": {
-      "executor": "@nrwl/workspace:run-commands",
+      "executor": "nx:run-commands",
       "options": {
         "commands": [
           {
