--- a/package.json
+++ b/package.json
@@ -97,7 +97,8 @@
     "tailwindcss": "3.1.8",
     "theme-change": "^2.2.0",
     "tslib": "^2.4.0",
-    "universal-base64": "^2.1.0"
+    "universal-base64": "^2.1.0",
+    "yargs": "^17.6.0"
   },
   "devDependencies": {
     "@babel/core": "7.18.13",
@@ -156,6 +157,7 @@
     "@types/react-dom": "18.0.6",
     "@types/react-router-dom": "5.3.3",
     "@types/react-table": "^7.7.12",
+    "@types/yargs": "^17.0.13",
     "@typescript-eslint/eslint-plugin": "5.38.1",
     "@typescript-eslint/parser": "5.38.1",
     "apollo": "^2.34.0",
@@ -184,6 +186,7 @@
     "storybook-addon-themes": "^6.1.0",
     "ts-jest": "28.0.5",
     "ts-node": "10.9.1",
+    "tsconfig-paths": "^4.1.0",
     "tslib": "^2.4.0",
     "typescript": "4.8.4",
     "url-loader": "^4.1.1",
