--- a/package.json
+++ b/package.json
@@ -21,12 +21,12 @@
     "@auth0/auth0-react": "^1.11.0",
     "@bytemd/plugin-gfm": "^1.17.4",
     "@bytemd/react": "^1.17.4",
-    "@effect/core": "^0.0.16",
-    "@effect/io": "^0.0.66",
-    "@fp-ts/core": "^0.0.11",
-    "@fp-ts/data": "^0.0.40",
-    "@fp-ts/optic": "^0.0.7",
-    "@fp-ts/schema": "^0.0.8",
+    "@effect/data": "^0.1.2",
+    "@effect/io": "^0.1.12",
+    "@effect/query": "^0.1.3",
+    "@fp-ts/core": "^0.2.1",
+    "@fp-ts/optic": "^0.1.0",
+    "@fp-ts/schema": "^0.1.3",
     "@headlessui/react": "^1.7.3",
     "@heroicons/react": "^2.0.12",
     "@neo4j/graphql": "^3.8.0",
@@ -130,25 +130,25 @@
     "@graphql-codegen/typescript-react-query": "^4.0.1",
     "@nestjs/schematics": "9.0.3",
     "@nestjs/testing": "9.1.2",
-    "@nrwl/cli": "15.6.2",
-    "@nrwl/cypress": "15.6.2",
-    "@nrwl/devkit": "15.6.2",
-    "@nrwl/eslint-plugin-nx": "15.6.2",
-    "@nrwl/jest": "15.6.2",
-    "@nrwl/js": "15.6.2",
-    "@nrwl/linter": "15.6.2",
-    "@nrwl/nest": "15.6.2",
-    "@nrwl/next": "15.6.2",
-    "@nrwl/node": "15.6.2",
-    "@nrwl/nx-cloud": "15.0.2",
-    "@nrwl/nx-plugin": "15.6.2",
-    "@nrwl/react": "15.6.2",
-    "@nrwl/storybook": "15.6.2",
-    "@nrwl/tao": "15.6.2",
-    "@nrwl/vite": "15.6.2",
-    "@nrwl/web": "15.6.2",
-    "@nrwl/webpack": "15.6.2",
-    "@nrwl/workspace": "15.6.2",
+    "@nrwl/cli": "15.7.1",
+    "@nrwl/cypress": "15.7.1",
+    "@nrwl/devkit": "15.7.1",
+    "@nrwl/eslint-plugin-nx": "15.7.1",
+    "@nrwl/jest": "15.7.1",
+    "@nrwl/js": "15.7.1",
+    "@nrwl/linter": "15.7.1",
+    "@nrwl/nest": "15.7.1",
+    "@nrwl/next": "15.7.1",
+    "@nrwl/node": "15.7.1",
+    "@nrwl/nx-cloud": "15.0.3",
+    "@nrwl/nx-plugin": "15.7.1",
+    "@nrwl/react": "15.7.1",
+    "@nrwl/storybook": "15.7.1",
+    "@nrwl/tao": "15.7.1",
+    "@nrwl/vite": "15.7.1",
+    "@nrwl/web": "15.7.1",
+    "@nrwl/webpack": "15.7.1",
+    "@nrwl/workspace": "15.7.1",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.7",
     "@relate/cli": "^1.0.5",
     "@storybook/addon-essentials": "6.5.15",
@@ -224,7 +224,7 @@
     "vite": "^4.0.4",
     "vite-plugin-eslint": "^1.8.1",
     "vite-tsconfig-paths": "^4.0.5",
-    "vitest": "^0.28.2",
+    "vitest": "^0.25.8",
     "webpack": "^5.75.0",
     "webpack-merge": "^5.8.0"
   }
