--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -29,9 +29,7 @@
       "@neo4j-cc/data-access-http": ["libs/data-access/http/src/index.ts"],
       "@neo4j-cc/data-access-khoros": ["libs/data-access/khoros/src/index.ts"],
       "@neo4j-cc/data-access-neo4j": ["libs/data-access/neo4j/src/index.ts"],
-      "@neo4j-cc/example/effect-service": [
-        "libs/example/effect-service/src/index.ts"
-      ],
+      "@neo4j-cc/example/effect-ts": ["libs/example/effect-ts/src/index.ts"],
       "@neo4j-cc/feature/ninja-leaderboard": [
         "libs/feature/ninja-leaderboard/src/index.ts"
       ],
